# toy-RNN

./: CMakeLists.txt  README.md  dataset.cpp  dataset.h  datatype.cpp  datatype.h  device_alternate.hpp  main.cpp  memo.org  net.pb.cc  net.pb.h  net.proto  netD.pb.cc  netD.pb.h  netD.proto  netS.pb.cc  netS.pb.h  netS.proto  rnn.cpp  rnn.hpp  rnn_math.cpp  rnn_math.cu  rnn_math.h  rnn_math.hpp
kjv12/: test.txt  train.txt
